objects/Props_Task__c.object
<CustomObject>
    <fields>
        <fullName>Base_Deal_URL__c</fullName>
        <label>Base Deal URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Claimed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Claimed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Complete_DateTime__c</fullName>
        <label>Complete DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Props Tasks</relationshipLabel>
        <relationshipName>Props_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_DateTime__c</fullName>
        <label>Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Props Tasks</relationshipLabel>
        <relationshipName>Props_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Props Task</label>
    <listViews>
        <fullName>Detailer_LA_Props_Task</fullName>
        <filterScope>Queue</filterScope>
        <label>Detailer - LA</label>
        <queue>Detailer_LA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Detailer_SF_Props_Task</fullName>
        <filterScope>Queue</filterScope>
        <label>Detailer - SF</label>
        <queue>Detailer_SF</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Merchandising_Props_Task</fullName>
        <filterScope>Queue</filterScope>
        <label>Merchandising</label>
        <queue>Merchandising</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Props Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Props Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>